eramba-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eramba-web2
  namespace: eramba-2
  labels:
    app.kubernetes.io/name: eramba-web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: eramba-web2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: eramba-web2
    spec:
      containers:
      - name: eramba-web2
        image: #PUT YOUR OWN DOCKERIZED CONTAINER HERE
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
