eramba-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eramba-web2
  namespace: eramba-1
  labels:
    app.kubernetes.io/name: eramba-web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: eramba-web2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: eramba-web2
    spec:
      containers:
      - name: eramba-web2
        image: #put your own Eramba dockerized container here
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: eramba-web
  namespace: eramba-2
  labels:
    app.kubernetes.io/name: eramba-web2
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: eramba-web2
  type: LoadBalancer
...
